--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Portfolio</title>
+    <title>portfolio</title>
 </head>
 <body>    
-    <p>My name is daniel, this is my portfolio website</p>
+    <p>my name is daniel, this is my portfolio website</p>
 </body>
 </html>
