--- a/quarters.html
+++ b/quarters.html
@@ -47,8 +47,8 @@
 
     <script>
         function goToQuarter(quarter) {
-            alert("You selected the " + quarter + " Quarter!");            
-        }
+    window.location.href = quarter + '.html'; 
+}
     </script>
 </body>
 </html>
