--- a/quarters.html
+++ b/quarters.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Quarterly Projects</h1>
+        <h1>quarters</h1>
         <button class="btn" onclick="goToQuarter('1')">q1</button>
         <button class="btn" onclick="goToQuarter('2')">q2</button>
         <button class="btn" onclick="goToQuarter('3')">q3</button>
