--- a/quarters.html
+++ b/quarters.html
@@ -39,10 +39,10 @@
 <body>
     <div class="container">
         <h1>quarters</h1>
-        <button class="btn" onclick="goToQuarter('1')">q1</button>
-        <button class="btn" onclick="goToQuarter('2')">q2</button>
-        <button class="btn" onclick="goToQuarter('3')">q3</button>
-        <button class="btn" onclick="goToQuarter('4')">q4</button>
+        <button class="btn" onclick="goToQuarter('1')">1</button>
+        <button class="btn" onclick="goToQuarter('2')">2</button>
+        <button class="btn" onclick="goToQuarter('3')">3</button>
+        <button class="btn" onclick="goToQuarter('4')">4</button>
     </div>
 
     <script>
