--- a/1.html
+++ b/1.html
@@ -52,10 +52,18 @@
     <h1>1st Quarter</h1>    
     <div class="project">
         <img src="https://scontent.fmnl17-6.fna.fbcdn.net/v/t1.15752-9/462582033_969756778305657_8915752962516328024_n.png?_nc_cat=109&ccb=1-7&_nc_sid=9f807c&_nc_ohc=HnBlwVDcU8cQ7kNvgGc65-6&_nc_zt=23&_nc_ht=scontent.fmnl17-6.fna&oh=03_Q7cD1QFtI0YPWdgeIby3nwe_BfCNqcmppAM46N0qnyRCoEHSww&oe=6777A9BC" alt="1st Quarter Image">
+        <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/467471814_1171289257979000_8254862647337564593_n.png?_nc_cat=103&ccb=1-7&_nc_sid=9f807c&_nc_ohc=JB2KspCeVn8Q7kNvgHnaSTX&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1QHNGww2K06-r1em_v1x0RGnoIa3LbYBZgJaxFIJwGFdeA&oe=6777AFED" alt="1st Quarter Image">
         <p class="project-description">
             i learned how to print statements
         </p>
-    </div>    
+    </div> 
+    
+    <div class="project">
+    <img src="your-image-url" alt="Image Alt Text">
+    <p class="project-description">
+        Your project description here.
+    </p>
+</div>
     <button class="back-btn" onclick="window.location.href='index.html'">back</button>
 </body>
 </html>
