--- a/1.html
+++ b/1.html
@@ -53,6 +53,7 @@
     <h1>Banner</h1>
     <div class="project">
         <img src="https://scontent.fmnl17-6.fna.fbcdn.net/v/t1.15752-9/462582033_969756778305657_8915752962516328024_n.png?_nc_cat=109&ccb=1-7&_nc_sid=9f807c&_nc_ohc=HnBlwVDcU8cQ7kNvgGc65-6&_nc_zt=23&_nc_ht=scontent.fmnl17-6.fna&oh=03_Q7cD1QFtI0YPWdgeIby3nwe_BfCNqcmppAM46N0qnyRCoEHSww&oe=6777A9BC" alt="">
+    <h1>output</h1>    
         <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/467471814_1171289257979000_8254862647337564593_n.png?_nc_cat=103&ccb=1-7&_nc_sid=9f807c&_nc_ohc=JB2KspCeVn8Q7kNvgHnaSTX&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1QHNGww2K06-r1em_v1x0RGnoIa3LbYBZgJaxFIJwGFdeA&oe=6777AFED" alt="">
         <p class="project-description">
             i learned how to print statements
@@ -61,6 +62,7 @@
     <h1>calculator</h1>
     <div class="project">
     <img src="https://scontent.fmnl17-6.fna.fbcdn.net/v/t1.15752-9/462647696_1979940632525548_9052963023232721636_n.png?_nc_cat=109&ccb=1-7&_nc_sid=9f807c&_nc_ohc=NoaCFIiSOlUQ7kNvgE1DBJH&_nc_zt=23&_nc_ht=scontent.fmnl17-6.fna&oh=03_Q7cD1QEHIzyYMkD38EX71N5IbMHr6zLDBOvGdvKrYIeomM8C7g&oe=6777B276" alt="">
+    <h1>output</h1>
     <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/462648104_611242054591638_4790608491811816586_n.png?_nc_cat=106&ccb=1-7&_nc_sid=9f807c&_nc_ohc=uW4qoYUuDHsQ7kNvgEQSBZu&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1QEIPBEfRl6xjcj_zZKoyAeWm2yenGewbO4WkDopOGxCIQ&oe=6777C83F" alt="">
     <p class="project-description">
         i learned how to do math with code and make a simple calculator
