--- a/2.html
+++ b/2.html
@@ -51,8 +51,7 @@
 <body>
     <h1>2nd Quarter</h1>
     <h1>biggest number</h1>
-    <div class="project">
-    <h1>code</h1>    
+    <div class="project">       
         <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/462639576_1099089471707938_5441983486133245215_n.png?_nc_cat=106&ccb=1-7&_nc_sid=9f807c&_nc_ohc=x58_UYsWLfsQ7kNvgFe15yh&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1QEHGJJLqmm5z_TA5Obr6JWEt3dWTZvidzEfKxtar8R7lQ&oe=67779DAC" alt="">
     <h1>output</h1>
         <img src="https://scontent.fmnl17-2.fna.fbcdn.net/v/t1.15752-9/462647700_524173293948057_8699249801450542577_n.png?_nc_cat=111&ccb=1-7&_nc_sid=9f807c&_nc_ohc=IXWCBgr-P5wQ7kNvgHolABO&_nc_zt=23&_nc_ht=scontent.fmnl17-2.fna&oh=03_Q7cD1QGznRxCSaFLQ1iFDyeEkB9sxkbo58MijxypnaDawhYM1Q&oe=6777B10E" alt="">
@@ -60,14 +59,16 @@
             i learned how to use scanner and compare 3 numbers and find out whichc one is the biggest one
         </p>
     </div> 
-    <h1>joptionpane</h1>
-    <div class="project">
-    <h1>code</h1>
-    <img src="" alt="">
+    <h1>joption</h1>
+    <div class="project">    
+    <img src="https://scontent.fmnl17-2.fna.fbcdn.net/v/t1.15752-9/462575782_2136437880086263_4686415198668509220_n.png?_nc_cat=111&ccb=1-7&_nc_sid=9f807c&_nc_ohc=FqiPlcsIbZIQ7kNvgGphLWW&_nc_zt=23&_nc_ht=scontent.fmnl17-2.fna&oh=03_Q7cD1QF1ngNu38ZkjQwbN9wj2Z9G02ybRFJ0Ld-4JpN0MFrM9A&oe=6777B710" alt="">
     <h1>output</h1>
-    <img src="" alt="">
+    <img src="https://scontent.fmnl17-1.fna.fbcdn.net/v/t1.15752-9/462650153_1686141242234460_8298247969360839026_n.png?_nc_cat=100&ccb=1-7&_nc_sid=9f807c&_nc_ohc=y5PGBJlkd-MQ7kNvgFL4glc&_nc_zt=23&_nc_ht=scontent.fmnl17-1.fna&oh=03_Q7cD1QGBFjsSrNHEMEndhY6z37QGWceHcqkeIagtxDP7QrvS3A&oe=6777C4A6" alt="">
+    <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/462644421_1070029001586360_8519523309895937934_n.png?_nc_cat=106&ccb=1-7&_nc_sid=9f807c&_nc_ohc=cd1Cxsv4p84Q7kNvgFLXQ4P&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1QG_fykVWb6Po6QquQcIC_HDX6XSUZc4iVsywv2juYpc4A&oe=6777BA4C" alt="">
+    <img src="https://scontent.fmnl17-2.fna.fbcdn.net/v/t1.15752-9/462639662_1257991988754181_5047132819246802692_n.png?_nc_cat=107&ccb=1-7&_nc_sid=9f807c&_nc_ohc=LGTkPwAZGS0Q7kNvgH892fe&_nc_zt=23&_nc_ht=scontent.fmnl17-2.fna&oh=03_Q7cD1QE4sXPUJWUZa8DEkgs9pFN46RG95Oc0sdmfkVcLOzQzAw&oe=6777CA7F" alt="">
+    <img src="https://scontent.fmnl17-5.fna.fbcdn.net/v/t1.15752-9/462648932_960141932647354_3548715138064914882_n.png?_nc_cat=102&ccb=1-7&_nc_sid=9f807c&_nc_ohc=LvE5bwB4upsQ7kNvgGBa9tm&_nc_zt=23&_nc_ht=scontent.fmnl17-5.fna&oh=03_Q7cD1QGL4-Kr2yeO8IeNaAm3JGFFIysMNELy9yhxmDciOXVhAQ&oe=67779FDE" alt="">
     <p class="project-description">
-        description
+        i learned how to use joptionpane
     </p>
 </div>
     <button class="back-btn" onclick="window.location.href='index.html'">back</button>
