--- a/1.html
+++ b/1.html
@@ -68,6 +68,15 @@
         i learned how to do math with code and make a simple calculator
     </p>
 </div>
+    <h1>biggest number</h1>
+    <div class="project">       
+        <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/462639576_1099089471707938_5441983486133245215_n.png?_nc_cat=106&ccb=1-7&_nc_sid=9f807c&_nc_ohc=x58_UYsWLfsQ7kNvgFe15yh&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1QEHGJJLqmm5z_TA5Obr6JWEt3dWTZvidzEfKxtar8R7lQ&oe=67779DAC" alt="">
+    <h1>output</h1>
+        <img src="https://scontent.fmnl17-2.fna.fbcdn.net/v/t1.15752-9/462647700_524173293948057_8699249801450542577_n.png?_nc_cat=111&ccb=1-7&_nc_sid=9f807c&_nc_ohc=IXWCBgr-P5wQ7kNvgHolABO&_nc_zt=23&_nc_ht=scontent.fmnl17-2.fna&oh=03_Q7cD1QGznRxCSaFLQ1iFDyeEkB9sxkbo58MijxypnaDawhYM1Q&oe=6777B10E" alt="">
+        <p class="project-description">
+            i learned how to use scanner and compare 3 numbers and find out whichc one is the biggest one
+        </p>
+    </div>
     <button class="back-btn" onclick="window.location.href='index.html'">back</button>
 </body>
 </html>
