--- a/2.html
+++ b/2.html
@@ -49,16 +49,7 @@
     </style>
 </head>
 <body>
-    <h1>2nd Quarter</h1>
-    <h1>biggest number</h1>
-    <div class="project">       
-        <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/462639576_1099089471707938_5441983486133245215_n.png?_nc_cat=106&ccb=1-7&_nc_sid=9f807c&_nc_ohc=x58_UYsWLfsQ7kNvgFe15yh&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1QEHGJJLqmm5z_TA5Obr6JWEt3dWTZvidzEfKxtar8R7lQ&oe=67779DAC" alt="">
-    <h1>output</h1>
-        <img src="https://scontent.fmnl17-2.fna.fbcdn.net/v/t1.15752-9/462647700_524173293948057_8699249801450542577_n.png?_nc_cat=111&ccb=1-7&_nc_sid=9f807c&_nc_ohc=IXWCBgr-P5wQ7kNvgHolABO&_nc_zt=23&_nc_ht=scontent.fmnl17-2.fna&oh=03_Q7cD1QGznRxCSaFLQ1iFDyeEkB9sxkbo58MijxypnaDawhYM1Q&oe=6777B10E" alt="">
-        <p class="project-description">
-            i learned how to use scanner and compare 3 numbers and find out whichc one is the biggest one
-        </p>
-    </div> 
+    <h1>2nd Quarter</h1>     
     <h1>joption</h1>
     <div class="project">    
     <img src="https://scontent.fmnl17-2.fna.fbcdn.net/v/t1.15752-9/462575782_2136437880086263_4686415198668509220_n.png?_nc_cat=111&ccb=1-7&_nc_sid=9f807c&_nc_ohc=FqiPlcsIbZIQ7kNvgGphLWW&_nc_zt=23&_nc_ht=scontent.fmnl17-2.fna&oh=03_Q7cD1QF1ngNu38ZkjQwbN9wj2Z9G02ybRFJ0Ld-4JpN0MFrM9A&oe=6777B710" alt="">
@@ -71,6 +62,14 @@
         i learned how to use joptionpane
     </p>
 </div>
+    <h1>grade</h1>
+    <div class="project">    
+    <img src="https://scontent.fmnl17-5.fna.fbcdn.net/v/t1.15752-9/462647701_547464834753903_5084495878904238618_n.png?_nc_cat=102&ccb=1-7&_nc_sid=9f807c&_nc_ohc=DcmoPJD75R0Q7kNvgEPFOSo&_nc_zt=23&_nc_ht=scontent.fmnl17-5.fna&oh=03_Q7cD1QEH8I3ffAT-hYglnZB4Itlw49OewH9bEMI_Vge6A0JUiA&oe=6777ADDE" alt="">    
+    <p class="project-description">
+        i learned how to use scanner in switch
+    </p>
+</div>
+    
     <button class="back-btn" onclick="window.location.href='index.html'">back</button>
 </body>
 </html>
