--- a/1.html
+++ b/1.html
@@ -56,7 +56,7 @@
     <h1>output</h1>    
         <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/467471814_1171289257979000_8254862647337564593_n.png?_nc_cat=103&ccb=1-7&_nc_sid=9f807c&_nc_ohc=JB2KspCeVn8Q7kNvgHnaSTX&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1QHNGww2K06-r1em_v1x0RGnoIa3LbYBZgJaxFIJwGFdeA&oe=6777AFED" alt="">
         <p class="project-description">
-            i learned how to print statements
+            I learned how to print statements.
         </p>
     </div> 
     <h1>calculator</h1>
@@ -65,7 +65,7 @@
     <h1>output</h1>
     <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/462648104_611242054591638_4790608491811816586_n.png?_nc_cat=106&ccb=1-7&_nc_sid=9f807c&_nc_ohc=uW4qoYUuDHsQ7kNvgEQSBZu&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1QEIPBEfRl6xjcj_zZKoyAeWm2yenGewbO4WkDopOGxCIQ&oe=6777C83F" alt="">
     <p class="project-description">
-        i learned how to do math with code and make a simple calculator
+        I learned how to do math with code and make a simple calculator.
     </p>
 </div>
     <h1>biggest number</h1>
@@ -74,7 +74,7 @@
     <h1>output</h1>
         <img src="https://scontent.fmnl17-2.fna.fbcdn.net/v/t1.15752-9/462647700_524173293948057_8699249801450542577_n.png?_nc_cat=111&ccb=1-7&_nc_sid=9f807c&_nc_ohc=IXWCBgr-P5wQ7kNvgHolABO&_nc_zt=23&_nc_ht=scontent.fmnl17-2.fna&oh=03_Q7cD1QGznRxCSaFLQ1iFDyeEkB9sxkbo58MijxypnaDawhYM1Q&oe=6777B10E" alt="">
         <p class="project-description">
-            i learned how to use scanner and compare 3 numbers and find out whichc one is the biggest one
+            I learned how to use scanner and compare 3 numbers and find out which one is the biggest number.
         </p>
     </div>
     <button class="back-btn" onclick="window.location.href='index.html'">back</button>
