--- a/2.html
+++ b/2.html
@@ -59,14 +59,14 @@
     <img src="https://scontent.fmnl17-2.fna.fbcdn.net/v/t1.15752-9/462639662_1257991988754181_5047132819246802692_n.png?_nc_cat=107&ccb=1-7&_nc_sid=9f807c&_nc_ohc=LGTkPwAZGS0Q7kNvgH892fe&_nc_zt=23&_nc_ht=scontent.fmnl17-2.fna&oh=03_Q7cD1QE4sXPUJWUZa8DEkgs9pFN46RG95Oc0sdmfkVcLOzQzAw&oe=6777CA7F" alt="">
     <img src="https://scontent.fmnl17-5.fna.fbcdn.net/v/t1.15752-9/462648932_960141932647354_3548715138064914882_n.png?_nc_cat=102&ccb=1-7&_nc_sid=9f807c&_nc_ohc=LvE5bwB4upsQ7kNvgGBa9tm&_nc_zt=23&_nc_ht=scontent.fmnl17-5.fna&oh=03_Q7cD1QGL4-Kr2yeO8IeNaAm3JGFFIysMNELy9yhxmDciOXVhAQ&oe=67779FDE" alt="">
     <p class="project-description">
-        i learned how to use joptionpane
+        I learned how to use joptionpane.
     </p>
 </div>
     <h1>grade</h1>
     <div class="project">    
     <img src="https://scontent.fmnl17-5.fna.fbcdn.net/v/t1.15752-9/462647701_547464834753903_5084495878904238618_n.png?_nc_cat=102&ccb=1-7&_nc_sid=9f807c&_nc_ohc=DcmoPJD75R0Q7kNvgEPFOSo&_nc_zt=23&_nc_ht=scontent.fmnl17-5.fna&oh=03_Q7cD1QEH8I3ffAT-hYglnZB4Itlw49OewH9bEMI_Vge6A0JUiA&oe=6777ADDE" alt="">    
     <p class="project-description">
-        i learned how to use scanner in switch
+        I learned how to use scanner in nested if.
     </p>
 </div>
     
