--- a/2.html
+++ b/2.html
@@ -66,7 +66,7 @@
     <div class="project">    
     <img src="https://scontent.fmnl17-5.fna.fbcdn.net/v/t1.15752-9/462647701_547464834753903_5084495878904238618_n.png?_nc_cat=102&ccb=1-7&_nc_sid=9f807c&_nc_ohc=DcmoPJD75R0Q7kNvgEPFOSo&_nc_zt=23&_nc_ht=scontent.fmnl17-5.fna&oh=03_Q7cD1QEH8I3ffAT-hYglnZB4Itlw49OewH9bEMI_Vge6A0JUiA&oe=6777ADDE" alt="">    
     <p class="project-description">
-        I learned how to use scanner in nested if.
+        I learned how to use scanner with an if else if ladder.
     </p>
 </div>
     
