--- a/2.html
+++ b/2.html
@@ -69,7 +69,44 @@
         I learned how to use scanner with if else statements.
     </p>
 </div>
-    
+    <h1>while loop</h1>
+    <div class="project">    
+    <img src="https://scontent.fmnl17-4.fna.fbcdn.net/v/t1.15752-9/462652061_560358013516806_6963625567851902253_n.png?_nc_cat=104&ccb=1-7&_nc_sid=9f807c&_nc_ohc=nLLKuaFO70cQ7kNvgE4fPIR&_nc_zt=23&_nc_ht=scontent.fmnl17-4.fna&oh=03_Q7cD1QE3hU9aef1aLQfj791uBTeiK5EZZ5oIDtGOaAzocKqH0g&oe=6777C71D" alt="">    
+    <p class="project-description">
+        I learned how to make a while loop.
+    </p>
+</div>
+    <h1>game</h1>
+    <div class="project">    
+    <img src="https://scontent.fmnl17-1.fna.fbcdn.net/v/t1.15752-9/462578168_1127169635643351_4732934091757103228_n.png?_nc_cat=101&ccb=1-7&_nc_sid=9f807c&_nc_ohc=e6DFxLRajkwQ7kNvgF3CrJ9&_nc_zt=23&_nc_ht=scontent.fmnl17-1.fna&oh=03_Q7cD1QE-5bxDRKROd8e0S6V8j4maJcDPwP-JGbzFvdDDX4mQ8A&oe=6777DF8C" alt="">    
+    <p class="project-description">
+        I learned how to use scanner, switch, and nested if to make a game.
+    </p>
+</div>
+    <h1>patterns</h1>
+    <div class="project">    
+    <img src="https://scontent.fmnl17-5.fna.fbcdn.net/v/t1.15752-9/462648303_2512873635584702_5981879698928101072_n.png?_nc_cat=110&ccb=1-7&_nc_sid=9f807c&_nc_ohc=pwUiIYMZC30Q7kNvgHQ8Soc&_nc_zt=23&_nc_ht=scontent.fmnl17-5.fna&oh=03_Q7cD1QEdxkecu6jOkhuHFdXAYFrTF3FHwE71spArNqSKona8pg&oe=6777F347" alt="">   
+    <img src="https://scontent.fmnl17-6.fna.fbcdn.net/v/t1.15752-9/462648305_2005289219943298_6250601717319984435_n.png?_nc_cat=109&ccb=1-7&_nc_sid=9f807c&_nc_ohc=Ebjds61e7_0Q7kNvgFlaR9B&_nc_zt=23&_nc_ht=scontent.fmnl17-6.fna&oh=03_Q7cD1QGv2TANypWkGtbBXEVhK5cjoHUvnk3ej4_PVqdnFzZqrQ&oe=6777C2D3" alt="">  
+    <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/462574622_28145250768399654_8742981323237987162_n.png?_nc_cat=106&ccb=1-7&_nc_sid=9f807c&_nc_ohc=A-DfB0ti_4YQ7kNvgEE-JUF&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1QHYX6Jy7owP1M3zBBdMm2cAJId6hrAsy1x1wenkpqFW6A&oe=6777C1D5" alt="">  
+    <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/462653454_578712411469784_2317011761277650199_n.png?_nc_cat=106&ccb=1-7&_nc_sid=9f807c&_nc_ohc=yibd5uaCLHoQ7kNvgFvRT_i&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1QFSmEwrj6NWH-fFavyq2I_2wtzrXKnZfovFALaw0dHWyA&oe=6777F6E6" alt="">  
+    <img src="https://scontent.fmnl17-6.fna.fbcdn.net/v/t1.15752-9/462643667_917596320027449_1076894394826636747_n.png?_nc_cat=109&ccb=1-7&_nc_sid=9f807c&_nc_ohc=IVGbPhfmLCgQ7kNvgHTZSJC&_nc_zt=23&_nc_ht=scontent.fmnl17-6.fna&oh=03_Q7cD1QH_BvsCS1Tpdhnmt0qgoSjVl0whunl6suxFu6tPEfG1_A&oe=6777E565" alt="">  
+    <h1>output</h1>
+    <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/462648091_1823389154863003_2250168296086720457_n.png?_nc_cat=103&ccb=1-7&_nc_sid=9f807c&_nc_ohc=MdiYQ6Z4OagQ7kNvgHgV7jp&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1QElZTeWLt_Kx1fVGwQyedDA8v7HDlfqr0tGza2LIkW4Hw&oe=6777F8BC" alt="">   
+    <img src="https://scontent.fmnl17-6.fna.fbcdn.net/v/t1.15752-9/462578714_1803543667072662_3528331579508345719_n.png?_nc_cat=109&ccb=1-7&_nc_sid=9f807c&_nc_ohc=AvAAK68KmIwQ7kNvgGCTH9I&_nc_zt=23&_nc_ht=scontent.fmnl17-6.fna&oh=03_Q7cD1QEUOqm1hPKjUX71yKPQYUlt3fg6I5ix9kjf2xJ6khz-zw&oe=6777CAC4" alt="">  
+    <img src="https://scontent.fmnl17-7.fna.fbcdn.net/v/t1.15752-9/462578224_1500362440650198_7195377202846043061_n.png?_nc_cat=108&ccb=1-7&_nc_sid=9f807c&_nc_ohc=DV4o3I0u33kQ7kNvgGRLj17&_nc_zt=23&_nc_ht=scontent.fmnl17-7.fna&oh=03_Q7cD1QFS5U66BjZ6L0Pvj7FlNtFs_V_9R-zKwWlyal5dnoedjw&oe=6777EA9C" alt="">  
+    <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/462649278_1085807703239802_6911092316236133655_n.png?_nc_cat=103&ccb=1-7&_nc_sid=9f807c&_nc_ohc=2OT80nr73FwQ7kNvgG8V20L&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1QGcb4-C03MLuln6_9SVJlmk7uLigdGNsYP3euanTeZ3Ag&oe=6777C809" alt="">  
+    <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/462644694_1538812253462089_7522681913332403050_n.png?_nc_cat=106&ccb=1-7&_nc_sid=9f807c&_nc_ohc=k-0iRZ6T57oQ7kNvgHEkNKF&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1QFQSN3mZtyQ-OKnH2ezR7Sqj7GurysPBTqAbfq_uW_HaA&oe=6777E8D6" alt=""> 
+    <p class="project-description">
+        I learned how to make patterns with arrays.
+    </p>
+</div>
+    <h1>multiplication table</h1>
+    <div class="project">    
+    <img src="https://scontent.fmnl17-5.fna.fbcdn.net/v/t1.15752-9/462648303_2512873635584702_5981879698928101072_n.png?_nc_cat=110&ccb=1-7&_nc_sid=9f807c&_nc_ohc=pwUiIYMZC30Q7kNvgHQ8Soc&_nc_zt=23&_nc_ht=scontent.fmnl17-5.fna&oh=03_Q7cD1QEdxkecu6jOkhuHFdXAYFrTF3FHwE71spArNqSKona8pg&oe=6777F347" alt="">      
+    <p class="project-description">
+        I learned how to make a multiplication table.
+    </p>
+</div>
     <button class="back-btn" onclick="window.location.href='index.html'">back</button>
 </body>
 </html>
