--- a/3.html
+++ b/3.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>quarter 3</title>
+    <title>3rd quarter</title>
     <style>
         body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            padding: 20px;
+            background-color: #f0f0f0;
+        }
+
+        .container {
+            text-align: center;
         }
 
         h1 {
-            font-size: 2.5em;
-            margin-bottom: 40px;
+            font-size: 3em;
+            margin-bottom: 20px;
         }
-
         .back-btn {
             margin-top: 20px;
             padding: 10px 20px;
@@ -31,9 +38,5 @@
         }
     </style>
 </head>
-<body>
-    <h1>3rd Quarter</h1>     
-    
-    <button class="back-btn" onclick="window.location.href='index.html'">back</button>
-</body>
+   <button class="back-btn" onclick="window.location.href='index.html'">back</button>
 </html>
