--- a/3.html
+++ b/3.html
@@ -3,26 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3rd quarter</title>
+    <title>quarter 3</title>
     <style>
         body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-        }
-
-        .container {
-            text-align: center;
+            background-color: #f4f4f4;
+            padding: 20px;
         }
 
         h1 {
-            font-size: 3em;
-            margin-bottom: 20px;
+            font-size: 2.5em;
+            margin-bottom: 40px;
         }
+
+        .project {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        .project img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+
+        .project-description {
+            margin-top: 10px;
+            font-size: 1.2em;
+            color: #333;
+        }
+
         .back-btn {
             margin-top: 20px;
             padding: 10px 20px;
@@ -38,5 +48,17 @@
         }
     </style>
 </head>
-   <button class="back-btn" onclick="window.location.href='index.html'">back</button>
+<body>
+    <h1>3rd Quarter</h1>     
+    <h1></h1>
+    <div class="project">    
+    <img src="" alt="">
+    <h1>output</h1>
+    <img src="" alt="">    
+    <p class="project-description">
+        I learned how to .
+    </p>
+</div>
+    <button class="back-btn" onclick="window.location.href='index.html'">back</button>
+</body>
 </html>
