--- a/3.html
+++ b/3.html
@@ -54,7 +54,8 @@
     <div class="project">    
     <img src="" alt="">
     <h1>output</h1>
-    <img src="" alt="">    
+    <img src="https://raw.githubusercontent.com/dzzlamar/dzzlamar.github.io/refs/heads/main/bike.png" alt="">    
+    <img src="https://raw.githubusercontent.com/dzzlamar/dzzlamar.github.io/refs/heads/main/mtbike.png" alt="">  
     <p class="project-description">
         I learned how to .
     </p>
