--- a/3.html
+++ b/3.html
@@ -60,7 +60,7 @@
         <img src="" alt="">
     <p class="project-description">
         
-        I learned how to .
+        I learned how to create multiple objects from a class and store their attributes using instance variables.
     </p>
 </div>
     <button class="back-btn" onclick="window.location.href='index.html'">back</button>
