--- a/3.html
+++ b/3.html
@@ -50,7 +50,15 @@
 </head>
 <body>
     <h1>3rd Quarter</h1>     
-    <h1></h1>
+    <h1>What's more - multiple class</h1>
+    <div class="project">    
+    <img src="https://raw.githubusercontent.com/dzzlamar/dzzlamar.github.io/refs/heads/main/parent.png" alt=""> 
+    <img src="https://raw.githubusercontent.com/dzzlamar/dzzlamar.github.io/refs/heads/main/mother.png" alt="">
+    <img src="https://raw.githubusercontent.com/dzzlamar/dzzlamar.github.io/refs/heads/main/childkuyaate.png" alt="">
+    <p class="project-description">
+        Through this activity I learned about inheritance.
+    </p>
+</div>
     <div class="project">    
     
     
