--- a/3.html
+++ b/3.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <h1>3rd Quarter</h1>     
-    <h1>What's more - multiple class</h1>
+    <h1>multiple class</h1>
     <div class="project">    
     <img src="https://raw.githubusercontent.com/dzzlamar/dzzlamar.github.io/refs/heads/main/parent.png" alt=""> 
     <img src="https://raw.githubusercontent.com/dzzlamar/dzzlamar.github.io/refs/heads/main/mother.png" alt="">
@@ -66,6 +66,54 @@
     <img src="https://raw.githubusercontent.com/dzzlamar/dzzlamar.github.io/refs/heads/main/bikeoutput.png" alt ="">           
     <p class="project-description">        
         I learned how to create multiple objects from a class and store their attributes using instance variables.
+    </p>
+</div>
+    <h1>Animal class<h1>
+    <div class="project">
+        <p class="project-description">        
+        I learned a simpler way to do inheritance.
+    </p>
+</div>       
+    <h1>quiz<h1>
+    <div class="project">
+        <p class="project-description">        
+        I learned that I needed to listen to the discussions more.
+    </p>
+</div>
+    <h1>abstract final keyword <h1>
+    <div class="project">
+        <p class="project-description">        
+        I learned that it was like inheritance but in one class instead of having subclasses.
+    </p>
+</div>
+        <h1>abstract final keyword<h1>
+    <div class="project">
+        <p class="project-description">        
+        This activity was like the previous activity.
+    </p>
+</div>
+    <h1>interfaces and implements<h1>
+    <div class="project">
+        <p class="project-description">        
+       This activity was also like inheritance.
+    </p>
+</div>
+    <h1>abstract interface and implements<h1>
+    <div class="project">
+        <p class="project-description">        
+        This activity was similar to interfaces and implements.
+    </p>
+</div>
+    <h1>Encapsulation<h1>
+    <div class="project">
+        <p class="project-description">        
+        I learned how to make variables private.
+    </p>
+</div>
+    <h1>Hello codi<h1>
+    <div class="project">
+        <p class="project-description">        
+        This activity was the most fun one out of all the activities.
     </p>
 </div>
     <button class="back-btn" onclick="window.location.href='index.html'">back</button>
