--- a/3.html
+++ b/3.html
@@ -82,36 +82,45 @@
 </div>
     <h1>abstract final keyword <h1>
     <div class="project">
+        <img src="https://scontent.fmnl17-1.fna.fbcdn.net/v/t1.15752-9/476341230_652115550814913_6209505896072269425_n.png?_nc_cat=100&ccb=1-7&_nc_sid=9f807c&_nc_ohc=5VEssAQtbBoQ7kNvgHUKLhD&_nc_oc=AdjiuL7LhvOqfG1n7J9dWYUjt8KfGmdpjpDJBy1nYYB9A4XgAFFdu9qK1jhyk4UBk1c&_nc_zt=23&_nc_ht=scontent.fmnl17-1.fna&oh=03_Q7cD1gGN1Y9l9hFH-ADroMiXk2kG2JDKPovCH16WC5jl11c9cw&oe=67D415BE" alt ="">
+        <img src="https://scontent.fmnl17-1.fna.fbcdn.net/v/t1.15752-9/476344707_1648733866526997_8983502895225653468_n.png?_nc_cat=101&ccb=1-7&_nc_sid=9f807c&_nc_ohc=A5g8leDBRCAQ7kNvgFcmAsJ&_nc_oc=Adj9qv0iCSqq5k2-T6mrk8t3OFIL9v82UbRCMpUtANQgFwn8LBpyW66pg7EWzNThj5o&_nc_zt=23&_nc_ht=scontent.fmnl17-1.fna&oh=03_Q7cD1gGU0urIGXHaSDyHFv7-ZfiIHAzeWevA0WGEUal00xYvBA&oe=67D4490F" alt ="">
         <p class="project-description">        
         I learned that it was like inheritance but in one class instead of having subclasses.
     </p>
 </div>
         <h1>abstract final keyword<h1>
     <div class="project">
+        <img src="https://scontent.fmnl17-4.fna.fbcdn.net/v/t1.15752-9/476671273_1130915678825292_4389633108758079462_n.png?_nc_cat=105&ccb=1-7&_nc_sid=9f807c&_nc_ohc=jGsdptu9AjgQ7kNvgE2EWBI&_nc_oc=Adhgo-xQ0iAmtg1u7UjynaniTti-vgZwkRWarS8XBTlPkfMtKwaj9DExO-ELqpB8IRY&_nc_zt=23&_nc_ht=scontent.fmnl17-4.fna&oh=03_Q7cD1gEeYxpVcEyvG_7GWJkVSGwWluu7VsbV3oGHLxzolXPEcg&oe=67D43B57" alt ="">
+        <img src="https://scontent.fmnl17-1.fna.fbcdn.net/v/t1.15752-9/476906973_1509863189948870_7105965623356336350_n.png?_nc_cat=100&ccb=1-7&_nc_sid=9f807c&_nc_ohc=h8rjR0q9VckQ7kNvgEIcqEt&_nc_oc=AdirZWma0awsSYApU2cg79CpuXizlw0s9mawdr4TJOw3pXimB470a3kdzvnbvgCODz8&_nc_zt=23&_nc_ht=scontent.fmnl17-1.fna&oh=03_Q7cD1gGG0E8P0-WZO955VEuJ0Y-POv5TcW_vC0Xkvfjq4WJZoA&oe=67D41D67" alt ="">
         <p class="project-description">        
         This activity was like the previous activity.
     </p>
 </div>
     <h1>interfaces and implements<h1>
     <div class="project">
+        <img src="https://scontent.fmnl17-1.fna.fbcdn.net/v/t1.15752-9/476417809_1534810550440139_7835061078175197588_n.png?_nc_cat=100&ccb=1-7&_nc_sid=9f807c&_nc_ohc=zc88G5F9zMYQ7kNvgGPHJXi&_nc_oc=AdiHS8V0GkKfftUvAziCRUJkJfhE_Bo0QTH8fe1WRL-ZxqFKJiwJwm9XwzAvgrNr9R8&_nc_zt=23&_nc_ht=scontent.fmnl17-1.fna&oh=03_Q7cD1gEzonHXhPYxNVQgMT1M1_40YoUC5Y7tBj_Fp3Y64YA_cw&oe=67D4309A" alt ="">
         <p class="project-description">        
        This activity was also like inheritance.
     </p>
 </div>
     <h1>abstract interface and implements<h1>
     <div class="project">
+        <img src="https://scontent.fmnl17-2.fna.fbcdn.net/v/t1.15752-9/476314077_2362266494120023_7651366050798622377_n.png?_nc_cat=107&ccb=1-7&_nc_sid=9f807c&_nc_ohc=Prp42V25GKkQ7kNvgHrdBZW&_nc_oc=Adj82_3FqGrwuj1Pd50oGY5NlXyZe8kSn8SKRPHoPZ8nOhMIMmoMMzI-eNE4jehl2wg&_nc_zt=23&_nc_ht=scontent.fmnl17-2.fna&oh=03_Q7cD1gH8LQ4IW0WqK4WiSiIf-WhIneOQU91huyne0XVHkjkN2w&oe=67D42948" alt ="">
         <p class="project-description">        
         This activity was similar to interfaces and implements.
     </p>
 </div>
     <h1>Encapsulation<h1>
     <div class="project">
+        <img src="https://scontent.fmnl17-5.fna.fbcdn.net/v/t1.15752-9/476230347_3880294432242898_2693734538225918355_n.png?_nc_cat=102&ccb=1-7&_nc_sid=9f807c&_nc_ohc=kwtF29I_fCYQ7kNvgGWdSeQ&_nc_oc=AdiJZykjcWx9FbLMWd58aayDjiB0m7-JMh6040Vr5INwcOpDDtlrVs9fwOeczjOBz10&_nc_zt=23&_nc_ht=scontent.fmnl17-5.fna&oh=03_Q7cD1gG0lpRkONBN2f9NiwZNnbOXt1-VuKt3sKnEq0jQLsyXvQ&oe=67D43C35" alt ="">
         <p class="project-description">        
         I learned how to make variables private.
     </p>
 </div>
     <h1>Hello codi<h1>
     <div class="project">
+        <img src="https://scontent.fmnl17-3.fna.fbcdn.net/v/t1.15752-9/476412839_923413949985875_7429486169157239669_n.png?_nc_cat=103&ccb=1-7&_nc_sid=9f807c&_nc_ohc=6GWhJt_p4HYQ7kNvgHTQE2S&_nc_oc=AdhwhEXdmt_9nUCkujFZ9GiALcVtdldCVtVuJERZ8-0q4Jsd3jUcM0Kh0Dyaqrkicdg&_nc_zt=23&_nc_ht=scontent.fmnl17-3.fna&oh=03_Q7cD1gE2tqKcez-_7mYtRqEL4OR5mpzr3Ayfz1uOru4L2exguQ&oe=67D43CB1" alt ="">
+        <img src="https://scontent.fmnl17-5.fna.fbcdn.net/v/t1.15752-9/476898424_1153455949481702_2967422249808579403_n.png?_nc_cat=110&ccb=1-7&_nc_sid=9f807c&_nc_ohc=5l5zOcNssc4Q7kNvgFOc7z4&_nc_oc=AdhLvyBgBkJ7I5w29FDdMkd4uCUAwITtGEX0iWwplQticMzk1OoVhPUZwUnVO7mKfTI&_nc_zt=23&_nc_ht=scontent.fmnl17-5.fna&oh=03_Q7cD1gEDoxX5tTRqZZmxwIFeHRYUGoi607pedsEG2_AqGV5OFA&oe=67D41D74" alt ="">
         <p class="project-description">        
         This activity was the most fun one out of all the activities.
     </p>
