--- a/4.html
+++ b/4.html
@@ -3,26 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4th quarter</title>
+    <title>quarter 4</title>
     <style>
         body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-        }
-
-        .container {
-            text-align: center;
+            background-color: #f4f4f4;
+            padding: 20px;
         }
 
         h1 {
-            font-size: 3em;
-            margin-bottom: 20px;
+            font-size: 2.5em;
+            margin-bottom: 40px;
         }
+
+        .project {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        .project img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+
+        .project-description {
+            margin-top: 10px;
+            font-size: 1.2em;
+            color: #333;
+        }
+
         .back-btn {
             margin-top: 20px;
             padding: 10px 20px;
@@ -38,5 +48,48 @@
         }
     </style>
 </head>
-   <button class="back-btn" onclick="window.location.href='index.html'">back</button>
+<body>
+    <h1>3rd Quarter</h1>     
+    <h1>hello codi</h1>
+    <div class="project">    
+    <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/487954833_1785351105366262_7910033278457789358_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=9f807c&_nc_eui2=AeEjWuMIbVCN5QFeaLzu0x69VTPz0A7OslhVM_PQDs6yWJQ7vYkyaA_z5v72cx0dYEbOrYzxRqusoS6JVH0F_Xqp&_nc_ohc=hc92NAJaGYIQ7kNvgGXDVf_&_nc_zt=23&_nc_ht=scontent-sjc3-1.xx&oh=03_Q7cD1wFgANp-AZRXqCwkv_FTcmq0t3tZCRr_Hk95gSFo0VKvOA&oe=68114794" alt=""> 
+    <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/486325468_2174876726302364_8543556052005842798_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=9f807c&_nc_eui2=AeH29NeMQJojZ5-7zaAHgcnTVISV8wYKzHVUhJXzBgrMdeVGERob12L7chweXErRQijvTTJVlwIEHdkDErjwoi8S&_nc_ohc=YQvX6ZjfLDYQ7kNvgHRRfJ9&_nc_zt=23&_nc_ht=scontent-sjc3-1.xx&oh=03_Q7cD1wGDT4eQSD0_ttdBHRRCDC7SMy_xwZ5dhTL545-qB71Blw&oe=68115A97" alt="">    
+    <p class="project-description">
+        In this activity I applied what I learned about buttons.
+    </p>
+</div>
+    <h1>Two button game <h1>
+    <div class="project">      
+    <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/486228942_1369927690700027_6502516849771767823_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=9f807c&_nc_eui2=AeFZ_y4YLpOnY9AVG_xtfwOCsoq6QjiK_FqyirpCOIr8Wp1-fFcTXHXLCI4ODDdfNrtIswae73lz1KAcvRfilCr2&_nc_ohc=8ntGbVZhAL4Q7kNvgFfN8QK&_nc_zt=23&_nc_ht=scontent-sjc3-1.xx&oh=03_Q7cD1wHyqW12JDuSzjhQpLo-dmAVSKlwhBt5153PXPZCHvaBXg&oe=68116135" alt="">    
+    <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/485467375_672314865287601_7349417358390232809_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=9f807c&_nc_eui2=AeHnmmzdd0bqWcIrZsYLv8RB6xm4BImGt1rrGbgEiYa3WvVjkyYa9_lC1v82T27hTahM16h66qSjJ3-cFaWXYiba&_nc_ohc=h0w7XsN1CPYQ7kNvgGZnRJM&_nc_zt=23&_nc_ht=scontent-sjc3-1.xx&oh=03_Q7cD1wFuiMdrMbMYqK_4etnC8ZMXK7JO1kZkxQ_bR9RWZWAzZg&oe=68116705" alt="">                 
+    <p class="project-description">        
+        I learned how to make a two button game.
+    </p>
+</div>
+    <h1>piano<h1>
+    <div class="project">
+        <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/486556985_1182694609417762_8093362567485853353_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=9f807c&_nc_eui2=AeFoHl19xmR7hYXHV7Mrf1ERzsp0nOVEMyHOynSc5UQzIclmoVkgpX3IhqGkGx_rUgO3JnaTezvSgln1hq-qH0BO&_nc_ohc=1dXR-1o64r0Q7kNvgHzqSIo&_nc_zt=23&_nc_ht=scontent-sjc3-1.xx&oh=03_Q7cD1wGOuc42vQomfIRr9ed60hnAke7mDT6ZYFuq5QjTpUSfDg&oe=68115299" alt="">
+        <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/486333744_1145703830637615_2937932204982338798_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=9f807c&_nc_eui2=AeEhbrlwZCNwQoOnxLKV0m_MUHnCzZ3xC_JQecLNnfEL8vkMV-88fJFFcgmIiLt6-4BMFnGgauKQE0uKSPVsyEIr&_nc_ohc=vVeNozM4xCIQ7kNvgHKCpYz&_nc_zt=23&_nc_ht=scontent-sjc3-1.xx&oh=03_Q7cD1wGREKH986UMJ8-KSVfzhLKjXldCzJJ-MT4J8A7nGBm3aw&oe=68114ABB" alt="">
+        <p class="project-description">        
+        I learned how to make a piano.
+    </p>
+</div>       
+    <h1>piano challenge<h1>
+    <div class="project">
+        <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/486158110_1237538101222511_445428545729656118_n.png?_nc_cat=100&ccb=1-7&_nc_sid=9f807c&_nc_eui2=AeFmeK7vyRqqhosmwB0l8driA98gEbYmHYQD3yARtiYdhIV0l-zS7pkavmW8T4JtVtDyrtHlJEf8F0jD4wfMsYIN&_nc_ohc=CqLWBJ3srxEQ7kNvgGMQ7aH&_nc_zt=23&_nc_ht=scontent-sjc3-1.xx&oh=03_Q7cD1wE9BWu7gXOmqI-Kr-G1bo0RERJRWivToe4u9_U-TtVxYQ&oe=68115AAC" alt ="">
+        <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/487038470_664139803439350_7111156894839443651_n.png?_nc_cat=110&ccb=1-7&_nc_sid=9f807c&_nc_eui2=AeFF2GNwdErdF0uPQJfbOJXxX1qlq4VGNJlfWqWrhUY0mb59iIg-CqtfEQs_A-myosliRERd3pfG46gvbBdS7slw&_nc_ohc=PHHBvipQCukQ7kNvgFV5Wv0&_nc_zt=23&_nc_ht=scontent-sjc3-1.xx&oh=03_Q7cD1wExjGeVO9H8N3aoPvMguTrwBP1aHPcKGZZI_4ahIHGoig&oe=68116203" alt="">
+        <p class="project-description">        
+        I learned how to make a button that records,one that can stop recording, and one that can playback the recording.
+    </p>
+</div>
+    <h1>final project<h1>
+    <div class="project">
+        <img src="" alt ="">
+        <img src="" alt ="">
+        <p class="project-description">        
+        I learned how to make a app with my team that serves as a guide for people who need directions in our school.
+    </p>
+</div>       
+    <button class="back-btn" onclick="window.location.href='index.html'">back</button>
+</body>
 </html>
